--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^14.2.0",
     "framer-motion": "^6.3.3",
     "react": "^18.1.0",
+    "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^3.11.0",
     "react-in-viewport": "^1.0.0-alpha.28",
