--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^3.11.0",
     "react-in-viewport": "^1.0.0-alpha.28",
     "react-scripts": "5.0.1",
+    "react-smooth-scroll-hook": "^1.3.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
