--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
+  "homepage": "https://ahmed-o.github.io/chakraportfolio/",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.0.2",
@@ -10,6 +11,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.2.0",
     "framer-motion": "^6.3.3",
+    "gh-pages": "^4.0.0",
     "react": "^18.1.0",
     "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^18.1.0",
