--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "https://ahmed-o.github.io/chakraportfolio/",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.0.2",
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.2.0",
+    "formik": "^2.2.9",
     "framer-motion": "^6.3.3",
     "gh-pages": "^4.0.0",
     "react": "^18.1.0",
