--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.0.2",
+    "@emailjs/browser": "^3.6.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@testing-library/jest-dom": "^5.16.4",
@@ -16,6 +17,7 @@
     "react": "^18.1.0",
     "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^18.1.0",
+    "react-dotenv": "^0.1.3",
     "react-icons": "^3.11.0",
     "react-in-viewport": "^1.0.0-alpha.28",
     "react-scripts": "5.0.1",
@@ -25,8 +27,8 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-dotenv && react-scripts start",
+    "build": "react-dotenv && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -44,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "react-dotenv": {
+    "whitelist": ["API_KEY"]
   }
 }
