--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": ".",
+  "homepage": "https://ahmed-o.github.io/chakraportfolio/",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.0.2",
